--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@types/node": "^16.18.68",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
-
     "express": "^4.18.2",
     "graphql": "^16.8.1",
     "less": "^4.2.0",
@@ -20,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
